--- a/lab5-Node/views/partials/head.ejs
+++ b/lab5-Node/views/partials/head.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SKLEPIK</title>
     <link rel="stylesheet" href="/styles/style.css" />
+    <script src="/js/script.js"></script>
   </head>
-  <body>
-    <div>
+  <body class="bg-secondary scrollbar text-white">
+    <div class="px-11">
       <%- include('nav') %>
