--- a/lab5-Node/views/partials/nav.ejs
+++ b/lab5-Node/views/partials/nav.ejs
@@ -1,7 +1,10 @@
-<nav class='bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-800'>
+<nav class="px-2 sm:px-4 py-2.5 rounded">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
-    <a href="/" class="flex items-center">
-      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">SKLEPIK</span>
-  </a>
+    <a href="/" class="flex items-center font-white rounded-md hover:bg-primary">
+      <span class="self-center text-3xl px-6 py-3 font-semibold whitespace-nowrap dark:text-white">SKLEPIK</span>
+    </a>
+    <a href="/cart" class="flex items-center bg-accent hover:bg-opacity-70 rounded-md">
+      <span class="self-center text-3xl px-6 py-3 font-semibold whitespace-nowrap dark:text-white">Koszyk</span>
+    </a>
   </div>
 </nav>
